log
Thu 28 Sep 2023 05:17:33 PM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|3
total_score: 10/70
b5bc38f
Thu 28 Sep 2023 05:29:27 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:15: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   22 |   void* top = pq->heapArray->priority;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
081e8ff
